# AutoDanmuGen

./: .gitignore  AutoDanmuGen-cli  LICENSE  MANIFEST.in  README.md  main.py  requirements.txt  setup.cfg
AutoDanmuGen/: __init__.py  common_vars.py  config.py  extractor.py  preparer.py
AutoDanmuGen/core/: __init__.py  dataset.py  extract.py  extractor.py  prepare.py  preparer.py  preprocess.py  preprocessor.py  util.py
resources/: dicts-30000.json
src/AutoDanmuGen/: __main__.py  config.py  logger.py
src/AutoDanmuGen/cli/: cli.py
src/AutoDanmuGen/core/: candicate.py  danmu.py  extract.py  model.py
tests/core/: test_extract.py
