[metadata]
name = AutoDanmuGen
version = 0.0.1
author = flyotlin
author_email = flyotlin@gmail.com
description = Core library for auto-generating Danmu using livebot
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/flyotlin/AutoDanmuGen
project_urls =
    Bug Tracker = https://github.com/flyotlin/AutoDanmuGen/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data = True
install_requires = 
    jieba
    numpy
    sklearn
    torch
    typer

[options.packages.find]
where = src
